chore: add spotless (!2)